Full release notes, with more details and upgrade information, are available at:
https://channels.readthedocs.io/en/latest/releases

2.2.0 (2019-04-14)
------------------

* Updated requirements for ASGI v3 and Daphne 2.3.


2.1.7 (2019-01-31)
------------------

* HTTP request body size limit is now enforced

* database_sync_to_async now closes old connections before it runs code

* Auth middleware closes old connections before it runs


2.1.6 (2018-12-08)
------------------

* HttpCommunicator now extracts query strings correctly

* AsyncHttpConsumer provides channel layer attributes

* Prevent late-Daphne import errors


2.1.5 (2018-10-22)
------------------

* Django middleware caching now works on Django 1.11 and Django 2.0.
  The previous release only ran on 2.1.


2.1.4 (2018-10-19)
------------------

* Django middleware is now cached rather than instantiated per request
  resulting in a significant speed improvement

* ChannelServerLiveTestCase now serves static files again

* Improved error message resulting from bad Origin headers

* runserver logging now goes through the Django logging framework

* Generic consumers can now have non-default channel layers

* Improved error when accessing scope['user'] before it's ready


2.1.3 (2018-08-16)
------------------

* An ALLOWED_ORIGINS value of "*" will now also allow requests without a Host
  header at all (especially important for tests)

* The request.path value is now correct in cases when a server has SCRIPT_NAME
  set

* Errors that happen inside channel listeners inside a runworker or Worker
  class are now raised rather than suppressed


2.1.2 (2018-06-13)
------------------

* AsyncHttpConsumer now has a disconnect() method you can override

* Session and authentication middleware is now non-blocking.

* URL routing context now includes default arguments from the URLconf.

* The FORCE_SCRIPT_NAME setting is now respected in ASGI mode.

* ALLOWED_HOSTS is now set correctly during LiveServerTests.

